--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="col-lg-6 col-12 calificacion">
               <div class="calificacion-1">
                 <div class="bg-gray d-flex align-items-center rounded-xlg p-2 ml-0 mt-4 stars">
-                  <div class="ml-3">
+                  <div class="ml-lg-3">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
@@ -38,7 +38,7 @@
               </div>
               <div class="calificacion-2">
                 <div class="bg-gray d-flex align-items-center rounded-xlg p-2 ml-lg-2 ml-0 mt-4 stars">
-                  <div class="ml-3">
+                  <div class="ml-lg-3">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
@@ -50,7 +50,7 @@
               </div>
               <div class="calificacion-3">
                 <div class="bg-gray d-flex align-items-center rounded-xlg p-2 ml-lg-4 ml-0 mt-4 stars">
-                  <div class="ml-3">
+                  <div class="ml-lg-3">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
