--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="col-lg-6 col-12 calificacion">
               <div class="calificacion-1">
                 <div class="bg-gray d-flex align-items-center rounded-xlg p-2 ml-0 mt-4 stars">
-                  <div class="ml-lg-3">
+                  <div class="ml-lg-3 ml-0">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
@@ -33,31 +33,31 @@
                     <img src="images/icon-star.svg" alt="">
                   </div>
                   <div>
-                    <h3 class="ml-4 mt-3">Rated 5 Stars in Reviews</h3></div>
+                    <h3 class="ml-4 ml-0 mt-3">Rated 5 Stars in Reviews</h3></div>
                 </div>
               </div>
               <div class="calificacion-2">
                 <div class="bg-gray d-flex align-items-center rounded-xlg p-2 ml-lg-2 ml-0 mt-4 stars">
-                  <div class="ml-lg-3">
+                  <div class="ml-lg-3 ml-0">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
                   </div>
-                  <h3 class="ml-4 mt-3">Rated 5 Stars in Report Guru</h3>
+                  <h3 class="ml-lg-4 ml-0 mt-3">Rated 5 Stars in Report Guru</h3>
                 </div>
               </div>
               <div class="calificacion-3">
                 <div class="bg-gray d-flex align-items-center rounded-xlg p-2 ml-lg-4 ml-0 mt-4 stars">
-                  <div class="ml-lg-3">
+                  <div class="ml-lg-3 ml-0">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
                     <img src="images/icon-star.svg" alt="">
                   </div>
-                  <h3 class="ml-4 mt-3">Rated 5 Stars in BestTech</h3>
+                  <h3 class="ml-lg-4 ml-0 mt-3">Rated 5 Stars in BestTech</h3>
                 </div>
               </div>
             </div>
